# pw3270-autofill-sample

./: Makefile.in  README.md  autofill.cbp  configure.ac
src/include/: config.h.in
src/plugin/: startstop.c
